Updated logic adding search functionality and due date info